--- a/MediaExtractor/packages.config
+++ b/MediaExtractor/packages.config
@@ -3,4 +3,6 @@
   <package id="SevenZipExtractor" version="1.0.12" targetFramework="net45" />
   <package id="WindowsAPICodePack-Core" version="1.1.2" targetFramework="net45" />
   <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net45" />
+  <package id="WPFLocalizeExtension" version="3.1.2" targetFramework="net45" />
+  <package id="XAMLMarkupExtensions" version="1.3.0" targetFramework="net45" />
 </packages>
