--- a/MediaExtractor/MediaExtractor.csproj
+++ b/MediaExtractor/MediaExtractor.csproj
@@ -195,9 +195,7 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Strings\en-US\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy "$(SolutionDir)LICENSE" "$(TargetDir)" /Y
