Completed implementation of I18n

--- a/MediaExtractor/App.config
+++ b/MediaExtractor/App.config
@@ -1,3 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="MediaExtractor.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
+    <applicationSettings>
+        <MediaExtractor.Properties.Settings>
+            <setting name="Author" serializeAs="String">
+                <value>Raphael Stoeckli</value>
+            </setting>
+            <setting name="Website" serializeAs="String">
+                <value>https://github.com/rabanti-github/Media-Extractor</value>
+            </setting>
+            <setting name="License" serializeAs="String">
+                <value>MIT</value>
+            </setting>
+        </MediaExtractor.Properties.Settings>
+    </applicationSettings>
 </configuration>
