--- a/MediaExtractor/App.config
+++ b/MediaExtractor/App.config
@@ -4,6 +4,9 @@
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="MediaExtractor.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="MediaExtractor.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <applicationSettings>
         <MediaExtractor.Properties.Settings>
@@ -18,4 +21,26 @@
             </setting>
         </MediaExtractor.Properties.Settings>
     </applicationSettings>
+    <userSettings>
+        <MediaExtractor.Properties.Settings>
+            <setting name="DocumentShowImages" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="DocumentShowOther" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="DocumentPreserveStructure" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="DocumentShowExplorer" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="AppearanceDarkMode" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Locale" serializeAs="String">
+                <value />
+            </setting>
+        </MediaExtractor.Properties.Settings>
+    </userSettings>
 </configuration>
