--- a/MediaExtractor/App.config
+++ b/MediaExtractor/App.config
@@ -48,7 +48,7 @@
                 <value>False</value>
             </setting>
             <setting name="ImageExtensions" serializeAs="String">
-                <value>jpg,jpeg,png,wmf,emf,gif,bmp,ico</value>
+                <value>jpg,jpeg,png,wmf,emf,gif,bmp,ico,wdp</value>
             </setting>
             <setting name="TextExtensions" serializeAs="String">
                 <value>asc,bas,bat,c,cfg,cmd,cpp,cs,css,csv,h,hex,htm,html,inc,inf,info,ini,java,js,json,kt,ktm,kts,latex,less,lisp,log,lst,lua,markdown,md,me,meta,mf,p,pas,php,pl,pp,ps,ps1,psm1,py,r,rb,readme,reg,rs,rst,sh,sln,sql,sty,tcl,tex,ts,tsx,txt,vb,vba,vbs,yaml,yml</value>
