--- a/MediaExtractor/App.config
+++ b/MediaExtractor/App.config
@@ -1,6 +1,61 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
-    </startup>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="MediaExtractor.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="MediaExtractor.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
+    <applicationSettings>
+        <MediaExtractor.Properties.Settings>
+            <setting name="Author" serializeAs="String">
+                <value>Raphael Stoeckli</value>
+            </setting>
+            <setting name="Website" serializeAs="String">
+                <value>https://github.com/rabanti-github/Media-Extractor</value>
+            </setting>
+            <setting name="License" serializeAs="String">
+                <value>MIT</value>
+            </setting>
+        </MediaExtractor.Properties.Settings>
+    </applicationSettings>
+    <userSettings>
+        <MediaExtractor.Properties.Settings>
+            <setting name="DocumentShowImages" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="DocumentShowOther" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="DocumentPreserveStructure" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="DocumentShowExplorer" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="AppearanceDarkMode" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Locale" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ExtractSaveAll" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ExtractSaveSelected" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ImageExtensions" serializeAs="String">
+                <value>jpg,jpeg,png,wmf,emf,gif,bmp,ico,wdp</value>
+            </setting>
+            <setting name="TextExtensions" serializeAs="String">
+                <value>asc,bas,bat,c,cfg,cmd,cpp,cs,css,csv,h,hex,htm,html,inc,inf,info,ini,java,js,json,kt,ktm,kts,latex,less,lisp,log,lst,lua,markdown,md,me,meta,mf,p,pas,php,pl,pp,ps,ps1,psm1,py,r,rb,readme,reg,rs,rst,sh,sln,sql,sty,tcl,tex,ts,tsx,txt,vb,vba,vbs,yaml,yml</value>
+            </setting>
+            <setting name="XmlExtensions" serializeAs="String">
+                <value>xml,manifest,rels,xhtml,xaml,svg,pom,dtd,xsd,x3d,collada,cdxml,config,nuspec,graphml</value>
+            </setting>
+        </MediaExtractor.Properties.Settings>
+    </userSettings>
 </configuration>
