Added recent files

--- a/MediaExtractor/App.config
+++ b/MediaExtractor/App.config
@@ -39,7 +39,7 @@
                 <value>False</value>
             </setting>
             <setting name="Locale" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="ExtractSaveAll" serializeAs="String">
                 <value>False</value>
@@ -55,6 +55,9 @@
             </setting>
             <setting name="XmlExtensions" serializeAs="String">
                 <value>xml,manifest,rels,xhtml,xaml,svg,pom,dtd,xsd,x3d,collada,cdxml,config,nuspec,graphml</value>
+            </setting>
+            <setting name="RecentFiles" serializeAs="String">
+                <value />
             </setting>
         </MediaExtractor.Properties.Settings>
     </userSettings>
