--- a/MediaExtractor/App.config
+++ b/MediaExtractor/App.config
@@ -19,6 +19,9 @@
             <setting name="License" serializeAs="String">
                 <value>MIT</value>
             </setting>
+            <setting name="LargeFileThreshold" serializeAs="String">
+                <value>5242880</value>
+            </setting>
         </MediaExtractor.Properties.Settings>
     </applicationSettings>
     <userSettings>
@@ -57,6 +60,30 @@
                 <value>xml,manifest,rels,xhtml,xaml,svg,pom,dtd,xsd,x3d,collada,cdxml,config,nuspec,graphml</value>
             </setting>
             <setting name="RecentFiles" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="DocumentGenericTextPreview" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="DocumentShowLargeFileWarning" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="WindowLeft" serializeAs="String">
+                <value>-1</value>
+            </setting>
+            <setting name="WindowTop" serializeAs="String">
+                <value>-1</value>
+            </setting>
+            <setting name="WindowWidth" serializeAs="String">
+                <value>800</value>
+            </setting>
+            <setting name="WindowHeight" serializeAs="String">
+                <value>600</value>
+            </setting>
+            <setting name="WindowMaximized" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ScreenName" serializeAs="String">
                 <value />
             </setting>
         </MediaExtractor.Properties.Settings>
