--- a/MediaExtractor/MediaExtractor.csproj
+++ b/MediaExtractor/MediaExtractor.csproj
@@ -49,7 +49,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>none</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>bin\Media-Extractor_Release_v-VERSION-\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -81,6 +81,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -127,6 +128,7 @@
     </Compile>
     <Compile Include="SaveFileHandler.cs" />
     <Compile Include="MenuConverters.cs" />
+    <Compile Include="ScreenHandler.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="ViewModel.cs" />
     <Page Include="About.xaml">
@@ -199,11 +201,14 @@
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy "$(SolutionDir)LICENSE" "$(TargetDir)" /Y
-del "$(TargetDir)license.txt"
+    <PostBuildEvent>cd $(TargetDir)
+del *.pdb
+if $(ConfigurationName) == Release (
+del *.xml
+)
+xcopy "$(SolutionDir)LICENSE" "$(TargetDir)" /Y
 ren "$(TargetDir)LICENSE" license.txt
 xcopy "$(SolutionDir)Changelog.md" "$(TargetDir)" /Y
-del "$(TargetDir)changelog.txt"
 ren "$(TargetDir)Changelog.md" changelog.txt</PostBuildEvent>
   </PropertyGroup>
   <Import Project="..\packages\SevenZipExtractor.1.0.15\build\SevenZipExtractor.targets" Condition="Exists('..\packages\SevenZipExtractor.1.0.15\build\SevenZipExtractor.targets')" />
@@ -213,4 +218,7 @@ ren "$(TargetDir)Changelog.md" changelog.txt</PostBuildEvent>
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\SevenZipExtractor.1.0.15\build\SevenZipExtractor.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SevenZipExtractor.1.0.15\build\SevenZipExtractor.targets'))" />
   </Target>
+  <PropertyGroup>
+    <PreBuildEvent>rd /s /q "$(TargetDir)"</PreBuildEvent>
+  </PropertyGroup>
 </Project>
