Updated Readme and added translation helper project

--- a/MediaExtractor/MediaExtractor.csproj
+++ b/MediaExtractor/MediaExtractor.csproj
@@ -129,6 +129,7 @@
     <Compile Include="SaveFileHandler.cs" />
     <Compile Include="MenuConverters.cs" />
     <Compile Include="ScreenHandler.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="ViewModel.cs" />
     <Page Include="About.xaml">
