--- a/MediaExtractor/packages.config
+++ b/MediaExtractor/packages.config
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AdonisUI" version="1.16.0" targetFramework="net45" />
-  <package id="AdonisUI.ClassicTheme" version="1.16.0" targetFramework="net45" />
-  <package id="SevenZipExtractor" version="1.0.15" targetFramework="net45" />
-  <package id="WindowsAPICodePack-Core" version="1.1.2" targetFramework="net45" />
-  <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net45" />
+  <package id="AdonisUI" version="1.17.1" targetFramework="net45" />
+  <package id="AdonisUI.ClassicTheme" version="1.17.1" targetFramework="net45" />
+  <package id="Ookii.Dialogs.Wpf" version="5.0.1" targetFramework="net462" />
+  <package id="SevenZipExtractor" version="1.0.16" targetFramework="net45" />
 </packages>
